added category filter and fixed layout for cat pane

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,13 @@ body
 {
 	float: right !important;
 }
+
+.sidePane
+{
+	margin-top: 50px;
+	text-transform: capitalize;
+}
+
 .resultTitle
 {
 	margin-top: 10px;
