--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,14 @@ body
 {
 	overflow-x: hidden !important;
 	padding-top: 20px;
+	background-color: #F6F6F6;
 }
 
 
 .search
 {
 	margin-top: 30px;
+	margin-left: -35px;
 }
 
 span.cat
@@ -60,6 +62,6 @@ span.cat
 }
 .resultPost
 {
-	font-size: 14px;
+	font-size: 10px;
 }
 
